--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "override" : "node index.js"
+    "start" : "node index.js"
+  },
+  "bin":{
+    "override": "bin/override.js" 
   },
   "repository": {
     "type": "git",
