--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "override" : "node bin/override.js"
   },
   "bin":{
-    "override": "bin/override.js" 
+    "override": "bin/start.js" 
   },
   "repository": {
     "type": "git",
