--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "override" : "node bin/override.js"
+    "override": "node bin/override.js"
   },
-  "bin":{
-    "override": "bin/start.js" 
+  "bin": {
+    "override": "bin/start.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/Lab1les/nfs-override/issues"
   },
-  "homepage": "https://github.com/Lab1les/nfs-override#readme"
+  "homepage": "https://github.com/Lab1les/nfs-override#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
